js/arithmetics.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(b) {return b},
      peg$c1 = function(constant, vars, funct, est) {
                let bloque = new CodeBloc();      // Bloque donde guardamos la tabla de símbolos
                let symbolTable = {};             // Tabla de símbolo del bloque actual
                //symbolTable.father = getPrev();  //???????????????corregir esto
                if (constant){
                  symbolTable [constant[1].value] = new ConstDec({name: constant[1].value, value: constant [3]});
                  if (constant[4]){
                    constant[4].forEach( function (element){
                      symbolTable [element[1].value] = new ConstDec({name: element[1].value, value: element [3]});
                    });
                  }
                }

                if (vars){
                  symbolTable [vars[1].value] = new VarDec({name: vars[1].value, value: null});
                  if (vars[2]){
                    vars[2].forEach( function (element){
                      symbolTable [element [1].value] = new VarDec({name: element [1].value, value: null});
                    } );
                  }
                }
                setPrev(symbolTable);
                funct.forEach ( function (element){
                  var parametros = {};
                  if (element [3]){
                    parametros [element [3] [0].value] =  new ParamDec({name: element [3] [0].value, value: null });
                    element [3][1].forEach (function (x){
                      parametros [x[1].value]= new ParamDec({name: x[1].value, value: null });
                    });
                  }
                  let declaration = new FunctionDec({
                    name: element[1].value,
                    params: parametros,
                    code: element[6] // hacer aqui un new CodeBloc();
                  }, symbolTable);
                  //declaration.code.symbolTable.father = symbolTable;
                  symbolTable [element[1].value] = declaration
                });

                //setPrev(symbolTable.father);

                bloque.symbolTable = symbolTable;
                bloque.code = est;

                return bloque;
              },
      peg$c2 = function(id, assign, value) {return new BinOp ({type: "=", left: id, right: value});},
      peg$c3 = function(id, params) { var parametros = {};
                                                                            if (params){
                                                                              parametros [0] = params [0];
                                                                              var counter = 1;
                                                                              params [1].forEach((x)=>{
                                                                                parametros [counter] = x [1]
                                                                                counter++;
                                                                              });
                                                                            }
                                                                              return new FunctionCall({id:id, parametros: parametros})
                                                                            },
      peg$c4 = function(q, id) {return {type : q, id:id}},
      peg$c5 = function(x, exp) {return {type : x, expresion:exp}},
      peg$c6 = function(first, next) { var stats = {}
                                                              var counter = 2;
                                                              stats ["1"] = first;
                                                              next.forEach((x)=>{stats [""+counter] = x[1];
                                                                counter++;
                                                              });
                                                              return new StatementBloc (stats)
                                                            },
      peg$c7 = function(cond, th, els) { if (els){
                                                                      els = els[1];
                                                                    }
                                                                    return new IfStatement( { condition: cond,
                                                                    then: th,
                                                                    else: els });},
      peg$c8 = function(cond, d) { return new WhileStatement({condition: cond, do: d});},
      peg$c9 = function(exp) {return new ReturnStatement({value: exp})},
      peg$c10 = function(odd, right) { return new ComparissonOp( {type: odd, right: right, left: null })},
      peg$c11 = function(left, cond, right) {return new ComparissonOp({type: cond, left: left, right: right})},
      peg$c12 = function(signo, left, right) {  if (signo == "-"){
                                                                left = "-"+left;
                                                                left = +left;
                                                              }
                                                              return buildTree(left, right);
                                                            },
      peg$c13 = function(left, right) {return buildTree(left, right);},
      peg$c14 = function(id, params) { var parametros = {};
                                                                                if (params){
                                                                                  parametros [0] = params [0];
                                                                                  var counter = 1;
                                                                                  params [1].forEach((x)=>{
                                                                                    parametros [counter] = x [1]
                                                                                    counter++;
                                                                                  });
                                                                                }
                                                                                  return new FunctionCall({id:id, parametros: parametros})
                                                                                },
      peg$c15 = function(exp) {return new ParExp ({exp:exp });},
      peg$c16 = /^[ \t\n\r]/,
      peg$c17 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c18 = "+",
      peg$c19 = peg$literalExpectation("+", false),
      peg$c20 = function() {return '+';},
      peg$c21 = "-",
      peg$c22 = peg$literalExpectation("-", false),
      peg$c23 = function() {return '-';},
      peg$c24 = "*",
      peg$c25 = peg$literalExpectation("*", false),
      peg$c26 = function() {return "*";},
      peg$c27 = "/",
      peg$c28 = peg$literalExpectation("/", false),
      peg$c29 = function() {return "/";},
      peg$c30 = "(",
      peg$c31 = peg$literalExpectation("(", false),
      peg$c32 = ")",
      peg$c33 = peg$literalExpectation(")", false),
      peg$c34 = /^[0-9]/,
      peg$c35 = peg$classExpectation([["0", "9"]], false, false),
      peg$c36 = function(digits) { return new Leaf({type:'NUM', value: digits});},
      peg$c37 = /^[a-z_]/i,
      peg$c38 = peg$classExpectation([["a", "z"], "_"], false, true),
      peg$c39 = /^[a-z0-9_]/i,
      peg$c40 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true),
      peg$c41 = function(id) { return new Leaf({type:'ID',  value: id});},
      peg$c42 = "=",
      peg$c43 = peg$literalExpectation("=", false),
      peg$c44 = ":=",
      peg$c45 = peg$literalExpectation(":=", false),
      peg$c46 = function() {return ":=";},
      peg$c47 = ",",
      peg$c48 = peg$literalExpectation(",", false),
      peg$c49 = "return",
      peg$c50 = peg$literalExpectation("return", false),
      peg$c51 = "function",
      peg$c52 = peg$literalExpectation("function", false),
      peg$c53 = "{",
      peg$c54 = peg$literalExpectation("{", false),
      peg$c55 = "}",
      peg$c56 = peg$literalExpectation("}", false),
      peg$c57 = "const",
      peg$c58 = peg$literalExpectation("const", false),
      peg$c59 = "var",
      peg$c60 = peg$literalExpectation("var", false),
      peg$c61 = "begin",
      peg$c62 = peg$literalExpectation("begin", false),
      peg$c63 = "end",
      peg$c64 = peg$literalExpectation("end", false),
      peg$c65 = "if",
      peg$c66 = peg$literalExpectation("if", false),
      peg$c67 = "then",
      peg$c68 = peg$literalExpectation("then", false),
      peg$c69 = "else",
      peg$c70 = peg$literalExpectation("else", false),
      peg$c71 = "while",
      peg$c72 = peg$literalExpectation("while", false),
      peg$c73 = "do",
      peg$c74 = peg$literalExpectation("do", false),
      peg$c75 = "<=",
      peg$c76 = peg$literalExpectation("<=", false),
      peg$c77 = ">=",
      peg$c78 = peg$literalExpectation(">=", false),
      peg$c79 = "<",
      peg$c80 = peg$literalExpectation("<", false),
      peg$c81 = ">",
      peg$c82 = peg$literalExpectation(">", false),
      peg$c83 = "==",
      peg$c84 = peg$literalExpectation("==", false),
      peg$c85 = function(op) {return op;},
      peg$c86 = ";",
      peg$c87 = peg$literalExpectation(";", false),
      peg$c88 = "?",
      peg$c89 = peg$literalExpectation("?", false),
      peg$c90 = function() {return "?";},
      peg$c91 = "!",
      peg$c92 = peg$literalExpectation("!", false),
      peg$c93 = function() {return "!";},
      peg$c94 = "odd",
      peg$c95 = peg$literalExpectation("odd", false),
      peg$c96 = function() {return "odd";},

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseblock();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseblock() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseCONST();
    if (s2 !== peg$FAILED) {
      s3 = peg$parseID();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCONSTASSIGN();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseNUMBER();
          if (s5 !== peg$FAILED) {
            s6 = [];
            s7 = peg$currPos;
            s8 = peg$parseCOMMA();
            if (s8 !== peg$FAILED) {
              s9 = peg$parseID();
              if (s9 !== peg$FAILED) {
                s10 = peg$parseCONSTASSIGN();
                if (s10 !== peg$FAILED) {
                  s11 = peg$parseNUMBER();
                  if (s11 !== peg$FAILED) {
                    s8 = [s8, s9, s10, s11];
                    s7 = s8;
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
              } else {
                peg$currPos = s7;
                s7 = peg$FAILED;
              }
            } else {
              peg$currPos = s7;
              s7 = peg$FAILED;
            }
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$currPos;
              s8 = peg$parseCOMMA();
              if (s8 !== peg$FAILED) {
                s9 = peg$parseID();
                if (s9 !== peg$FAILED) {
                  s10 = peg$parseCONSTASSIGN();
                  if (s10 !== peg$FAILED) {
                    s11 = peg$parseNUMBER();
                    if (s11 !== peg$FAILED) {
                      s8 = [s8, s9, s10, s11];
                      s7 = s8;
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
              } else {
                peg$currPos = s7;
                s7 = peg$FAILED;
              }
            }
            if (s6 !== peg$FAILED) {
              s7 = peg$parseCOLON();
              if (s7 !== peg$FAILED) {
                s2 = [s2, s3, s4, s5, s6, s7];
                s1 = s2;
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parseVAR();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseID();
        if (s4 !== peg$FAILED) {
          s5 = [];
          s6 = peg$currPos;
          s7 = peg$parseCOMMA();
          if (s7 !== peg$FAILED) {
            s8 = peg$parseID();
            if (s8 !== peg$FAILED) {
              s7 = [s7, s8];
              s6 = s7;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$currPos;
            s7 = peg$parseCOMMA();
            if (s7 !== peg$FAILED) {
              s8 = peg$parseID();
              if (s8 !== peg$FAILED) {
                s7 = [s7, s8];
                s6 = s7;
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parseCOLON();
            if (s6 !== peg$FAILED) {
              s3 = [s3, s4, s5, s6];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parseFUNCTION();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseID();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseLEFTPAR();
            if (s7 !== peg$FAILED) {
              s8 = peg$currPos;
              s9 = peg$parseID();
              if (s9 !== peg$FAILED) {
                s10 = [];
                s11 = peg$currPos;
                s12 = peg$parseCOMMA();
                if (s12 !== peg$FAILED) {
                  s13 = peg$parseID();
                  if (s13 !== peg$FAILED) {
                    s12 = [s12, s13];
                    s11 = s12;
                  } else {
                    peg$currPos = s11;
                    s11 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s11;
                  s11 = peg$FAILED;
                }
                while (s11 !== peg$FAILED) {
                  s10.push(s11);
                  s11 = peg$currPos;
                  s12 = peg$parseCOMMA();
                  if (s12 !== peg$FAILED) {
                    s13 = peg$parseID();
                    if (s13 !== peg$FAILED) {
                      s12 = [s12, s13];
                      s11 = s12;
                    } else {
                      peg$currPos = s11;
                      s11 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s11;
                    s11 = peg$FAILED;
                  }
                }
                if (s10 !== peg$FAILED) {
                  s9 = [s9, s10];
                  s8 = s9;
                } else {
                  peg$currPos = s8;
                  s8 = peg$FAILED;
                }
              } else {
                peg$currPos = s8;
                s8 = peg$FAILED;
              }
              if (s8 === peg$FAILED) {
                s8 = null;
              }
              if (s8 !== peg$FAILED) {
                s9 = peg$parseRIGHTPAR();
                if (s9 !== peg$FAILED) {
                  s10 = peg$parseLEFTBRACKET();
                  if (s10 !== peg$FAILED) {
                    s11 = peg$parseblock();
                    if (s11 !== peg$FAILED) {
                      s12 = peg$parseRIGHTBRACKET();
                      if (s12 !== peg$FAILED) {
                        s13 = peg$parseCOLON();
                        if (s13 !== peg$FAILED) {
                          s5 = [s5, s6, s7, s8, s9, s10, s11, s12, s13];
                          s4 = s5;
                        } else {
                          peg$currPos = s4;
                          s4 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s4;
                        s4 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s4;
                      s4 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s4;
                    s4 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parseFUNCTION();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseID();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseLEFTPAR();
              if (s7 !== peg$FAILED) {
                s8 = peg$currPos;
                s9 = peg$parseID();
                if (s9 !== peg$FAILED) {
                  s10 = [];
                  s11 = peg$currPos;
                  s12 = peg$parseCOMMA();
                  if (s12 !== peg$FAILED) {
                    s13 = peg$parseID();
                    if (s13 !== peg$FAILED) {
                      s12 = [s12, s13];
                      s11 = s12;
                    } else {
                      peg$currPos = s11;
                      s11 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s11;
                    s11 = peg$FAILED;
                  }
                  while (s11 !== peg$FAILED) {
                    s10.push(s11);
                    s11 = peg$currPos;
                    s12 = peg$parseCOMMA();
                    if (s12 !== peg$FAILED) {
                      s13 = peg$parseID();
                      if (s13 !== peg$FAILED) {
                        s12 = [s12, s13];
                        s11 = s12;
                      } else {
                        peg$currPos = s11;
                        s11 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s11;
                      s11 = peg$FAILED;
                    }
                  }
                  if (s10 !== peg$FAILED) {
                    s9 = [s9, s10];
                    s8 = s9;
                  } else {
                    peg$currPos = s8;
                    s8 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s8;
                  s8 = peg$FAILED;
                }
                if (s8 === peg$FAILED) {
                  s8 = null;
                }
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseRIGHTPAR();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parseLEFTBRACKET();
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parseblock();
                      if (s11 !== peg$FAILED) {
                        s12 = peg$parseRIGHTBRACKET();
                        if (s12 !== peg$FAILED) {
                          s13 = peg$parseCOLON();
                          if (s13 !== peg$FAILED) {
                            s5 = [s5, s6, s7, s8, s9, s10, s11, s12, s13];
                            s4 = s5;
                          } else {
                            peg$currPos = s4;
                            s4 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s4;
                          s4 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s4;
                        s4 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s4;
                      s4 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s4;
                    s4 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsestatement();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s1, s2, s3, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
